<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/activity_qr_code_generator"
            app:titleTextColor="?colorAccent" />

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/label_status"
                android:textColor="?colorAccent"
                android:textSize="12sp" />

            <Spinner
                android:id="@+id/spinner_status"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:elevation="5dp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_station"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_station"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_price"
                    android:inputType="numberDecimal" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/tv_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/msg_param_is_empty"
                android:textColor="@color/red"
                android:textSize="20sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn_generate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_generate" />

            <Button
                android:id="@+id/btn_sms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_sms" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btn_notify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:src="@drawable/ic_scanner_black_24dp"
        android:tint="@color/white"
        app:elevation="4dp"
        app:fabSize="normal" />

</android.support.design.widget.CoordinatorLayout>